--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ tags
 *.debug
 Makefile*
 *.prl
-*.app
+# *.app
 moc_*.cpp
 ui_*.h
 qrc_*.cpp
@@ -34,6 +34,7 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
+qmake_qmake_immediate.qrc
 
 # qtcreator generated files
 *.pro.user*
